# Software-Security-Test

./: README.md
C++ assert/: Yibo_Zhu_lab2.cpp  main.cpp  test.py
CWE-Error implementation/: CSIS6033_Lab1_Yibo_Zhu.docx
CWE-Error implementation/CWE - error_Yibo_Zhu/: CWE-119.cpp  CWE-125.cpp  CWE-416.cpp  CWE-476.cpp  CWE-502.py  CWE-787.cpp
Static Analysis/: CSCI6033_quiz_Yibo_Zhu.docx  instruction.txt  sudoku_error.txt
Static Analysis/SudokuPuzzleSolver/: Puzzle.cpp  Puzzle.h  a.out  main.cpp  note.txt
Symbolic Execution with KLEE/: CSIS6033_Lab3_Yibo_Zhu.docx  Yibo_Zhu_Hangman.c  Yibo_Zhu_Hangman.cpp
Unit test with Google test/: CMakeLists.txt  CSIS6033_Lab3_Yibo_Zhu.docx  DateGoogleTest.cpp
